--- a/HW4/code/4a-f.ipynb
+++ b/HW4/code/4a-f.ipynb
@@ -2052,7 +2052,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model = keras.models.load_model('4a_1_0.h5')"
+   ]
   },
   {
    "cell_type": "code",
@@ -2061,7 +2063,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model.summary()"
+   ]
   },
   {
    "cell_type": "code",
@@ -2070,7 +2074,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "layer_name = 'simplernn_2'\n",
+    "intermediate_layer_model = Model(input=model.input,\n",
+    "                                 output=model.get_layer(layer_name).output)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2079,7 +2087,17 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "intermediate_output = []\n",
+    "sample_output = []\n",
+    "for idx in range(data_sample.shape[0] - 24):\n",
+    "    one_sample = data_sample[idx:24+idx, :]\n",
+    "    one_sample = one_sample.reshape((1,24,100))\n",
+    "    intermediate_output.append(intermediate_layer_model.predict(one_sample)[0,-1,:])\n",
+    "    sample_output.append(model.predict(one_sample, verbose=0)[0,-1,:])\n",
+    "intermediate_output = np.array(intermediate_output)\n",
+    "sample_output = np.array(sample_output)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2088,7 +2106,150 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "intermediate_output.shape # 276 = 12*23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sample_output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sample(probDist):\n",
+    "    # helper function to sample an index from a probability array\n",
+    "    a = [x/sum(probDist) for x in probDist]\n",
+    "    idx = 93\n",
+    "    while idx > 92:\n",
+    "        idx = np.argmax(np.random.multinomial(1, a, 1))\n",
+    "    return idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "generated = []\n",
+    "for i in np.arange(sample_output.shape[0]):\n",
+    "    next_index = sample(sample_output[i,:])\n",
+    "    next_char = num_to_char[next_index]\n",
+    "    generated.append(next_char)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "generated = np.array(generated)\n",
+    "generated = np.core.defchararray.replace(generated, '\\n', 'nl')\n",
+    "generated = np.core.defchararray.replace(generated, ' ', 'sp')\n",
+    "generated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "generated = generated.reshape((12,23))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "import plotly\n",
+    "plotly.tools.set_credentials_file(username='stephen001', api_key='ZDgJ3ZalqkR4SlW3nspF')\n",
+    "\n",
+    "x = range(23)\n",
+    "y = range(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "intermediate_output = intermediate_output.reshape((12,23,100))\n",
+    "sample_output = sample_output.reshape((12,23,100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for idx in range(100):\n",
+    "    z = intermediate_output[:,:,idx]\n",
+    "\n",
+    "    annotations = []\n",
+    "    for n, row in enumerate(z):\n",
+    "        for m, val in enumerate(row):\n",
+    "            var = z[n][m]\n",
+    "            annotations.append(\n",
+    "                dict(\n",
+    "                    text=str(generated[n,m]),\n",
+    "                    x=x[m], y=y[n],\n",
+    "                    xref='x1', yref='y1',\n",
+    "                    font=dict(color='white' if val > 0.5 else 'black'),\n",
+    "                    showarrow=False)\n",
+    "                )\n",
+    "\n",
+    "    colorscale = [[0.0, 'rgb(165,0,38)'], [0.1111111111111111, 'rgb(215,48,39)'], [0.2222222222222222, 'rgb(244,109,67)'], [0.3333333333333333, 'rgb(253,174,97)'], [0.4444444444444444, 'rgb(254,224,144)'], [0.5555555555555556, 'rgb(224,243,248)'], [0.6666666666666666, 'rgb(171,217,233)'], [0.7777777777777778, 'rgb(116,173,209)'], [0.8888888888888888, 'rgb(69,117,180)'], [1.0, 'rgb(49,54,149)']]  # custom colorscale\n",
+    "    trace = go.Heatmap(x=x, y=y, z=z, colorscale=colorscale, showscale=True)\n",
+    "\n",
+    "    fig = go.Figure(data=[trace])\n",
+    "    fig['layout'].update(\n",
+    "        title=\"Heatmap\",\n",
+    "        annotations=annotations,\n",
+    "        xaxis=dict(ticks='', side='bottom'),\n",
+    "        # ticksuffix is a workaround to add a bit of padding\n",
+    "        yaxis=dict(ticks='', ticksuffix='  '),\n",
+    "        width=700,\n",
+    "        height=500,\n",
+    "        autosize=False\n",
+    "    )\n",
+    "    py.image.save_as(fig, filename='results/'+'neuron'+str(idx)+'.png')\n",
+    "    #py.iplot(fig, filename='custom-colorscale', height=750)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -2108,7 +2269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
